--- a/Armut CaseStudy/View/All Services/Header/ServicesHeader.xib
+++ b/Armut CaseStudy/View/All Services/Header/ServicesHeader.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -14,32 +14,32 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="7ek-6b-qc7">
-                    <rect key="frame" x="0.0" y="0.0" width="834" height="1154"/>
+                    <rect key="frame" x="0.0" y="0.0" width="834" height="1120"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header" translatesAutoresizingMaskIntoConstraints="NO" id="iTd-2v-7th">
-                            <rect key="frame" x="106" y="0.0" width="622" height="689"/>
+                            <rect key="frame" x="144" y="0.0" width="546" height="604.66666666666663"/>
                             <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="iTd-2v-7th" secondAttribute="height" multiplier="1438:1592" id="MPe-JM-Fq5"/>
                             </constraints>
                         </imageView>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IYz-rj-B4u">
-                            <rect key="frame" x="80" y="729" width="674" height="425"/>
+                            <rect key="frame" x="40" y="644.66666666666663" width="754" height="475.33333333333337"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedding" translatesAutoresizingMaskIntoConstraints="NO" id="hno-ln-tZT">
-                                    <rect key="frame" x="0.0" y="0.0" width="674" height="425"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="754" height="475.33333333333331"/>
                                 </imageView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DfT-dp-jX2">
-                                    <rect key="frame" x="0.0" y="0.0" width="674" height="285.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="754" height="319"/>
                                     <subviews>
                                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8UZ-Kt-sqR">
-                                            <rect key="frame" x="451" y="62.5" width="213" height="160.5"/>
+                                            <rect key="frame" x="505.33333333333343" y="69.666666666666728" width="238.66666666666669" height="179.66666666666663"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="7Y0-XN-VrX">
-                                                    <rect key="frame" x="15" y="40.5" width="183" height="79"/>
+                                                    <rect key="frame" x="15" y="67.666666666666629" width="208.66666666666666" height="44.333333333333343"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-15%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="639-3A-hvX">
-                                                            <rect key="frame" x="48" y="0.0" width="86.5" height="43"/>
+                                                            <rect key="frame" x="79.666666666666629" y="0.0" width="49.333333333333343" height="24"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                             <color key="textColor" red="0.12941176470588234" green="0.12941176470588234" blue="0.12941176470588234" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -48,7 +48,7 @@
                                                             </variation>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="İNDİRİM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="meu-Xg-5lC">
-                                                            <rect key="frame" x="36.5" y="43" width="110" height="36"/>
+                                                            <rect key="frame" x="72.666666666666629" y="24" width="63.333333333333343" height="20.333333333333329"/>
                                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                             <color key="textColor" red="0.12941176470588234" green="0.12941176470588234" blue="0.12941176470588234" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -80,13 +80,13 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aN8-hi-pbs">
-                                    <rect key="frame" x="0.0" y="285.5" width="674" height="139.5"/>
+                                    <rect key="frame" x="0.0" y="319" width="754" height="156.33333333333337"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="xZX-Hf-Xqw">
-                                            <rect key="frame" x="15" y="40.5" width="644" height="58"/>
+                                            <rect key="frame" x="15" y="63.666666666666629" width="724" height="29"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FIRST TIME NEWLY WEDS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qs2-Xa-1V9">
-                                                    <rect key="frame" x="0.0" y="0.0" width="644" height="26.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="724" height="13.333333333333334"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="11"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -95,7 +95,7 @@
                                                     </variation>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WEDDING PHOTOGRAPHERS FROM 540 TL" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OFX-fu-bCa">
-                                                    <rect key="frame" x="0.0" y="26.5" width="644" height="31.5"/>
+                                                    <rect key="frame" x="0.0" y="13.333333333333485" width="724" height="15.666666666666664"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -148,10 +148,10 @@
                     </constraints>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zJV-PZ-E2O">
-                    <rect key="frame" x="20" y="84" width="794" height="60"/>
+                    <rect key="frame" x="20" y="74" width="794" height="43"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hizmet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hs0-4L-TSc">
-                            <rect key="frame" x="0.0" y="0.0" width="794" height="60"/>
+                            <rect key="frame" x="0.0" y="0.0" width="794" height="43"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
                             <color key="textColor" red="0.066854350270000001" green="0.073513232169999998" blue="0.12941855190000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <nil key="highlightedColor"/>
