--- a/Armut CaseStudy/View/All Services/Header/ServicesHeader.xib
+++ b/Armut CaseStudy/View/All Services/Header/ServicesHeader.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,36 +11,36 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="servicesHeaderReuseId" id="NGV-XK-xA1" customClass="ServicesHeader" customModule="Armut_CaseStudy" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="834" height="1194"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="681"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="7ek-6b-qc7">
-                    <rect key="frame" x="0.0" y="0.0" width="834" height="1120"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="641"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header" translatesAutoresizingMaskIntoConstraints="NO" id="iTd-2v-7th">
-                            <rect key="frame" x="144" y="0.0" width="546" height="604.66666666666663"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="415"/>
                             <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="iTd-2v-7th" secondAttribute="height" multiplier="1438:1592" id="MPe-JM-Fq5"/>
                             </constraints>
                         </imageView>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IYz-rj-B4u">
-                            <rect key="frame" x="40" y="644.66666666666663" width="754" height="475.33333333333337"/>
+                            <rect key="frame" x="40" y="455" width="295" height="186"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wedding" translatesAutoresizingMaskIntoConstraints="NO" id="hno-ln-tZT">
-                                    <rect key="frame" x="0.0" y="0.0" width="754" height="475.33333333333331"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="295" height="186"/>
                                 </imageView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DfT-dp-jX2">
-                                    <rect key="frame" x="0.0" y="0.0" width="754" height="319"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="295" height="125"/>
                                     <subviews>
                                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8UZ-Kt-sqR">
-                                            <rect key="frame" x="505.33333333333343" y="69.666666666666728" width="238.66666666666669" height="179.66666666666663"/>
+                                            <rect key="frame" x="191.66666666666666" y="27.333333333333314" width="93.333333333333343" height="70.333333333333329"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="7Y0-XN-VrX">
-                                                    <rect key="frame" x="15" y="67.666666666666629" width="208.66666666666666" height="44.333333333333343"/>
+                                                    <rect key="frame" x="15.000000000000004" y="13.000000000000004" width="63.333333333333343" height="44.333333333333343"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-15%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="639-3A-hvX">
-                                                            <rect key="frame" x="79.666666666666629" y="0.0" width="49.333333333333343" height="24"/>
+                                                            <rect key="frame" x="7" y="0.0" width="49.333333333333336" height="24"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                             <color key="textColor" red="0.12941176470588234" green="0.12941176470588234" blue="0.12941176470588234" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -48,7 +49,7 @@
                                                             </variation>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="İNDİRİM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="meu-Xg-5lC">
-                                                            <rect key="frame" x="72.666666666666629" y="24" width="63.333333333333343" height="20.333333333333329"/>
+                                                            <rect key="frame" x="0.0" y="24.000000000000057" width="63.333333333333336" height="20.333333333333329"/>
                                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                             <color key="textColor" red="0.12941176470588234" green="0.12941176470588234" blue="0.12941176470588234" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -80,13 +81,13 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aN8-hi-pbs">
-                                    <rect key="frame" x="0.0" y="319" width="754" height="156.33333333333337"/>
+                                    <rect key="frame" x="0.0" y="125" width="295" height="61"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="xZX-Hf-Xqw">
-                                            <rect key="frame" x="15" y="63.666666666666629" width="724" height="29"/>
+                                            <rect key="frame" x="15" y="8.3333333333333712" width="265" height="44.666666666666664"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FIRST TIME NEWLY WEDS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qs2-Xa-1V9">
-                                                    <rect key="frame" x="0.0" y="0.0" width="724" height="13.333333333333334"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="265" height="13.333333333333334"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="11"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -95,7 +96,7 @@
                                                     </variation>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WEDDING PHOTOGRAPHERS FROM 540 TL" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OFX-fu-bCa">
-                                                    <rect key="frame" x="0.0" y="13.333333333333485" width="724" height="15.666666666666664"/>
+                                                    <rect key="frame" x="0.0" y="13.333333333333256" width="265" height="31.333333333333329"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -106,7 +107,7 @@
                                             </subviews>
                                         </stackView>
                                     </subviews>
-                                    <color key="backgroundColor" red="0.087081901729999994" green="0.56343424320000002" blue="0.26268786189999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <color key="backgroundColor" red="0.086274509803921567" green="0.56470588235294117" blue="0.2627450980392157" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <constraints>
                                         <constraint firstItem="xZX-Hf-Xqw" firstAttribute="centerY" secondItem="aN8-hi-pbs" secondAttribute="centerY" id="JT6-qa-NTr"/>
                                         <constraint firstAttribute="width" secondItem="aN8-hi-pbs" secondAttribute="height" multiplier="275:57" id="TC2-Ar-83E"/>
@@ -148,10 +149,10 @@
                     </constraints>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zJV-PZ-E2O">
-                    <rect key="frame" x="20" y="74" width="794" height="43"/>
+                    <rect key="frame" x="20" y="74" width="335" height="43"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hizmet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hs0-4L-TSc">
-                            <rect key="frame" x="0.0" y="0.0" width="794" height="43"/>
+                            <rect key="frame" x="0.0" y="0.0" width="335" height="43"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
                             <color key="textColor" red="0.066854350270000001" green="0.073513232169999998" blue="0.12941855190000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <nil key="highlightedColor"/>
@@ -165,7 +166,6 @@
             <viewLayoutGuide key="safeArea" id="EAS-j6-KJl"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="EAS-j6-KJl" firstAttribute="bottom" secondItem="7ek-6b-qc7" secondAttribute="bottom" constant="40" id="9Tc-tL-e0J"/>
                 <constraint firstItem="zJV-PZ-E2O" firstAttribute="top" secondItem="EAS-j6-KJl" secondAttribute="top" constant="30" id="CKH-jx-xp3">
                     <variation key="heightClass=regular-widthClass=regular" constant="60"/>
                 </constraint>
@@ -178,7 +178,7 @@
             <connections>
                 <outlet property="lblTitle" destination="Hs0-4L-TSc" id="pbw-fK-qll"/>
             </connections>
-            <point key="canvasLocation" x="11.1328125" y="285.94436310395315"/>
+            <point key="canvasLocation" x="-170.32710280373831" y="215.76673866090715"/>
         </collectionReusableView>
     </objects>
     <resources>
