--- a/Armut CaseStudy/View/All Services/Items/BlogItemView.xib
+++ b/Armut CaseStudy/View/All Services/Items/BlogItemView.xib
@@ -3,6 +3,7 @@
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -44,6 +45,7 @@
                         </subviews>
                     </stackView>
                 </subviews>
+                <color key="backgroundColor" name="Background Color"/>
                 <constraints>
                     <constraint firstItem="fEB-dR-I4m" firstAttribute="leading" secondItem="rX3-C0-caa" secondAttribute="leading" constant="8" id="CIo-iv-GeU"/>
                     <constraint firstAttribute="trailing" secondItem="iUB-6C-W3o" secondAttribute="trailing" id="L4c-8N-848"/>
@@ -68,4 +70,9 @@
             <point key="canvasLocation" x="11.71875" y="127.37920937042459"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="Background Color">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
