--- a/Armut CaseStudy/View/Service Detail/ServiceDetail.storyboard
+++ b/Armut CaseStudy/View/Service Detail/ServiceDetail.storyboard
@@ -11,7 +11,7 @@
         <!--Title de title-->
         <scene sceneID="xE9-vJ-pmn">
             <objects>
-                <viewController storyboardIdentifier="ServiceDetail2StrId" id="WAn-eR-hVk" customClass="ServiceDetailVC" customModule="Armut_CaseStudy" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ServiceDetailStrId" id="WAn-eR-hVk" customClass="ServiceDetailVC" customModule="Armut_CaseStudy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jdO-XH-5gD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -27,6 +27,9 @@
                                     <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="16"/>
                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="btnContinueAction:" destination="WAn-eR-hVk" eventType="touchUpInside" id="8eq-l2-LUW"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xr2-nk-W4t">
                                 <rect key="frame" x="20" y="698" width="335" height="2"/>
